starter/css/style.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  line-height: 1.5;
}

/* Styling for header - including header and nagivation links */
header {
  background-color: grey;
  display: flex;
  flex-direction: row;
  margin: 0px 5%;
  justify-content: space-between;
  align-items: center;
}

/* Specific styling for main header */
header h1 {
  width: 25%;
  font-weight: 500;
  font-size: 30px;
  color: white;
  background-color: lightcoral;
  border-style: solid;
  border-color: darkgrey;
  border-width: 2px;
}

/* Styling for the background of the nagivation links */
#navigation {
  display: flex;
  width: 50%;
  justify-content: space-evenly;
}

/* Font color for the navigation links */
#navigation a {
  color: white
}

/* Styling for the whole hero banner including bacground image */
.hero-banner {
  margin: 0px 5%;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  background-image: url("../images/02-hero-bg.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

/* size for the profile picture image */
.hero-banner img {
  width: 160px;
  height: auto;
}

/* Style for subtitle including background and font color */
.hero-banner h2 {
  color: lightcoral;
  background-color: lightgrey;
  margin-bottom: 20px;
  border-style: solid;
  border-color: darkgray;
  border-width: 2px;
}

/* grid layout and style for the main content section of the page */
main {
  display: grid;
  margin: 0px 5%;
  background-color: lightgrey;
  grid-template-columns: 2fr 3fr 3fr;
  grid-template-rows: 200px 400px 200px 200px 120px;
  grid-template-areas:
    "about-me-header about-me-content about-me-content"
    "work-header study-guide study-guide"
    "work-header project-2 project-3"
    "work-header project-4 project-5"
    "contact-header contact-content contact-content"
}

/* Styling for containers of subheadings along the left side of the page including colour and positioning */
.subheading {
  display: flex;
  justify-content: flex-end;
  align-items: start;
  font-size: 30px;
  margin-right: 5px;
  margin-top: 20px;
  border-right-style: solid;
  border-right-width: 5px;
  border-right-color: lightcoral;

}

/* Styling for subeading themselves along left side of page */
h3 {
  margin: 10px 10px;
}

/* asigning 'About Me' 'Work' and 'Contact' headers to grid position'. Added 5px to bottom margin of 'work' so border would align with content on right*/
#about-me-header {
  grid-area: about-me-header;
}

#work-header {
  grid-area: work-header;
  margin-bottom: 5px
}

#contact-header {
  grid-area: contact-header;
}

/* Applying borders to all content items (main items on the right of the page) */
.content {
  border-style: solid;
  border-width: 3px;
  border-color: black;
}

/* Styling for all features within the 'work' area of the grid area including background image placement and color to disappear on hover */
.work-grid {
  display: flex;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  cursor: pointer;
  margin: 5px;
  color: black;
  opacity: 0.7;
  transition: all 0.5s ease-in-out;
}

/* applying rules to items within the 'work' area of the grid on hover */
.work-grid:hover {
  color: black;
  opacity: 1.0
}

/* Asigning projects to corresponding places within CSS grid. Adding background images. Unique margins for first project for alignment with rest of page */
#study-guide {
  grid-area: study-guide;
  background-image: url("../images/10+tips+for+successful+studying+3+OP.jpg");
  margin: 20px 5px 5px 5px;
}

#project-2 {
  grid-area: project-2;
  background-image: url("../images/02-portfolio-2.jpg");
}

#project-3 {
  grid-area: project-3;
  background-image: url("../images/02-portfolio-3.jpg");
}

#project-4 {
  grid-area: project-4;
  background-image: url("../images/02-portfolio-4.jpg");
}

#project-5 {
  grid-area: project-5;
  background-image: url("../../starter/images/02-portfolio-1.jpg");
}

/* styling for content outside of the 'work' grid area */
#about-me-content,
#contact-content {
  background-color: darkgrey;
  opacity: 0.8;
  display: flex;
}

/* Asigning grid areas to 'about me' and 'contact me' sections. applying specific positioning rules, margin and padding to those areas */
#about-me-content {
  grid-area: about-me-content;
  align-content: center;
  justify-content: start;
  flex-wrap: wrap;
  font-weight: bold;
  margin: 20px 5px 5px 5px;
  padding: 2%;
}

#contact-content {
  grid-area: contact-content;
  justify-content: space-evenly;
  align-items: center;
  margin: 20px 5px 5px 10px;
}

/* Font size and color for the hyperlinks within the 'contact me' section */
#contact-content a {
  font-size: 20px;
  color: black
}

/* Styling for each of the subtitles on the work grid area */
.content h4 {
  background-color: darkgrey;
  opacity: 0.7;
  padding: 20px;
  padding-bottom: 40px;
  height: 25px;
  color: black;
  font-size: 20px;
  font-weight: bold;
  margin-bottom: 20px;
}

/* media queries to change layout and style for different screen sizes */
@media screen and (max-width: 979px) {
  header {
    flex-direction: column;
  }

  /* changed styling of 'about me', 'work' and 'contact me' subheadings as they now appear on top of content rather than to left.
changed border from right to bottom:
adjusted font size to be suitable for screen size; */
  .subheading {
    justify-content: center;
    align-items: center;
    font-size: 20px;
    margin: 5px;
    border-bottom-style: solid;
    border-bottom-width: 5px;
    border-bottom-color: lightcoral;
    border-right: none;
  }

  /* aligned h1 text in center as moved to middle of screen for this screen size */
  h1 {
    text-align: center;
    width: 60%;
  }

  /* provided new structure for CSS that is more suitable for screen size */
  main {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 80px 200px 80px 400px 200px 200px 80px 100px;
    grid-template-areas:
      "about-me-header about-me-header"
      "about-me-content about-me-content"
      "work-header work-header"
      "study-guide study-guide"
      "project-2 project-3"
      "project-4 project-5"
      "contact-header contact-header"
      "contact-content contact-content"
  }

  /* adjusted font size and margin for smaller screen  */
  #about-me-content {
    font-size: 1.7vmax;
    margin: 0px 5px;
  }

  /* adjusted margins to bring subheadings closer to the corresponding content */
  #study-guide,
  #contact-content {
    margin: 0px 5px;
  }

}

/* media queries below for smaller screen size  */
@media screen and (max-width: 769px) {

/* alternative grid layout for small screen size */
  main {
    grid-template-columns: 1fr;
    grid-template-rows: 80px fit-content(150px) 80px 150px 150px 150px 150px 150px 80px 200px;
    grid-template-areas:
      "about-me-header"
      "about-me-content"
      "work-header"
      "study-guide"
      "project-2"
      "project-3"
      "project-4"
      "project-5"
      "contact-header"
      "contact-content"
  }

  /* adjusted width of navigation and header so they are suitable for smalle screen layout */
  #navigation {
    width: 80%;
  }

  header h1 {
    width: 60%;
  }

  /* adjusted positioning and size of items within the hero banner */
  .hero-banner {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .hero-banner img {
    width: 100px;
    height: auto;
  }

  .hero-banner h2 {
    margin-bottom: 0px;
    font-size: 20px;
  }

  #study-guide {
    margin: 0px 5px 5px 5px;
  }

  /* changed flex direction so links stack vertically */
  #contact-content {
    margin: 0px 5px;
    flex-direction: column;
  }

}

